Add students routes like crud and grouped|createandgroup
