# internal/App/ports/entities_repos/student_groups_repo.go
@@ -1,13 +1,10 @@
 package entitiesrepos
 
 import (
-	"context"
-
 	"github.com/1DamnDaniel3/rscrm_go_serv/internal/App/ports/generic"
 	"github.com/1DamnDaniel3/rscrm_go_serv/internal/Core/domain/entities"
 )
 
-type StudentsRepo interface {
-	generic.Repository[entities.Student]
-	GetGroupedStudents(ctx context.Context, group_id int64, entities *[]entities.Student) error
+type StudentGroupsRepo interface {
+	generic.Repository[entities.StudentGroup]
 }
